correction du fichier hello.html

--- a/hello.html
+++ b/hello.html
@@ -3,12 +3,9 @@
 <head>
     <title>Hello World!</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="hello.css" />
 </head>
 
 <body>
-	<script>
-		alert("Hello World");
-	</script>
+	<script src="hello.js"></script>
 </body>
 </html>
